@@ -1,4 +1,3 @@
 *~
-data/tznames.RData
 inst/unitTests/
 vignettes/auto/
