@@ -12,15 +12,15 @@ provide efficient implementations, through
 vectorisation and the use of R's native numeric
 representations of timestamps where possible.
 
-[ [More] ](http://enricoschumann.net/R/packages/datetimeutils/)
+[ [More] ](https://enricoschumann.net/R/packages/datetimeutils/)
 
 ## Installing the package
 
 The latest released version is available from
-http://enricoschumann.net. In an R session, just type:
+https://enricoschumann.net. In an R session, just type:
 
     install.packages('datetimeutils', type = 'source',
-                     repos = c('http://enricoschumann.net/R', getOption('repos')))
+                     repos = c('https://enricoschumann.net/R', getOption('repos')))
 
 
 For the latest development version, check out the Git repository and
@@ -28,15 +28,14 @@ build it. In a shell (e.g. sh or bash):
 
     ## FIRST-TIME INSTALLATION
     #### cd to parent directory and ...
-    $ git clone https://github.com/enricoschumann/datetimeutils.git
+    $ git clone https://git.sr.ht/~enricoschumann/datetimeutils
 
     #### build and install the package
-    $ Rscript datetimeutils/Scripts/tznames.R
     $ R CMD build datetimeutils
-    $ R CMD INSTALL datetimeutils_0.6-2.tar.gz  ## adjust version number
+    $ R CMD INSTALL datetimeutils_0.6-5.tar.gz  ## adjust version number
 
     #### optionally check
-    $ R CMD check datetimeutils_0.6-2.tar.gz    ## adjust version number
+    $ R CMD check datetimeutils_0.6-5.tar.gz    ## adjust version number
 
 
 
@@ -45,6 +44,5 @@ build it. In a shell (e.g. sh or bash):
     $ cd datetimeutils
 	$ git pull
 	$ cd ..
-	$ Rscript datetimeutils/Scripts/tznames.R
     $ R CMD build datetimeutils
-    $ R CMD INSTALL datetimeutils_0.6-2.tar.gz  ## adjust version number
+    $ R CMD INSTALL datetimeutils_0.6-5.tar.gz  ## adjust version number
